--- a/UniversalCalculator/TitlePage.xaml
+++ b/UniversalCalculator/TitlePage.xaml
@@ -1,4 +1,4 @@
-﻿<Page
+<Page
     x:Class="Calculator.TitlePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,18 +7,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-	<Page.Resources>
-		<Style TargetType="Button">
-			<Setter Property="Height" Value="50"/>
-			<Setter Property="Width" Value="200"/>
-		</Style>
-	</Page.Resources>
-	
+    <Page.Resources>
+        <Style TargetType="Button">
+            <Setter Property="Height" Value="50"/>
+            <Setter Property="Width" Value="200"/>
+        </Style>
+    </Page.Resources>
+
     <Grid>
         <Button x:Name="mathGoToButton" Content="Maths Calculator" Margin="300,250,0,0" VerticalAlignment="Top" Click="mathGoToButton_Click"/>
         <Button x:Name="mortgageGoToButton" Content="Mortgage Calculator" Margin="300,320,0,0" VerticalAlignment="Top" Click="mortgageGoToButton_Click"/>
         <Button x:Name="currencyGoToButton" Content="Currency Converter" Margin="300,390,0,0" VerticalAlignment="Top" Click="currencyGoToButton_Click"/>
-	<Button x:Name="tripCalculatorButton" Content="Trip Calculator" Margin="300,390,0,0" VerticalAlignment="Top" Click="tripCalculator_Click"/>
-        <Button x:Name="exitButton" Content="Exit" Margin="300,460,0,0" VerticalAlignment="Top" Click="exitButton_Click"/>
+        <Button x:Name="tripCalculatorButton" Content="Trip Calculator" Margin="300,470,0,0" VerticalAlignment="Top" Click="tripCalculator_Click"/>
+        <Button x:Name="exitButton" Content="Exit" Margin="300,538,0,0" VerticalAlignment="Top" Click="exitButton_Click"/>
     </Grid>
 </Page>
